--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -8,16 +8,17 @@
 <!--        <item name="android:background">@color/black</item>-->
 <!--        <item name="android:textColor">@color/white</item>-->
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondary">@color/red_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
+        <item name="fontFamily">sans-serif-condensed-light</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
 
     <style name="CardStyle">
-        <item name="cardCornerRadius">20dp</item>
+        <item name="cardCornerRadius">30dp</item>
         <item name="cardBackgroundColor">@color/white</item>
         <item name="android:textColor">@color/black</item>
     </style>
